# crocolang

./: .gitignore  Cargo.toml  LICENSE  README.md  SPEC.md  build.rs  croco-0.0.2.vsix  croco-0.0.3.vsix  croco-0.1.0.vsix  main  main.croco  main.croco.asm  main.ll  math.croco  test.yml  test22.croco
.github/workflows/: build.yml  ci.yml  tests.yml
benchmarks/fibonacci/: fib.c  fib.croco  fib.js  fib.py
benchmarks/loop/: loop.croco  loop.js  loop.py
src/: ast.rs  croco.rs  error.rs  interpreter.rs  lexer.rs  lib.rs  linker.rs  microsoft_craziness.c  ms_craziness_bindings.rs  parser.rs  symbol.rs  symbol_type.rs  test.rs  token.rs
src/ast/: mod.rs  utils.rs
src/ast/node/: array_create_node.rs  array_index_node.rs  as_node.rs  assignment_node.rs  block_node.rs  break_node.rs  compare_node.rs  constant_node.rs  continue_node.rs  deref_node.rs  divide_node.rs  dot_field_node.rs  dot_method_node.rs  function_call_node.rs  function_decl_node.rs  if_node.rs  import_node.rs  minus_node.rs  mod.rs  multiplicate_node.rs  not_node.rs  plus_node.rs  power_node.rs  ref_node.rs  return_node.rs  struct_assignment_node.rs  struct_create_node.rs  struct_decl_node.rs  struct_field_node.rs  symbol_node.rs  type_node.rs  unary_minus_node.rs  var_call_node.rs  var_copy_node.rs  var_decl_node.rs  void_node.rs  while_node.rs
src/builtin/: fs.rs  global.rs  http.rs  math.rs  mod.rs  os.rs
src/checker/: mod.rs
src/crocoi/: cli.rs  mod.rs  symbol.rs  utils.rs
src/crocoi/node/: array_create_node.rs  array_index_node.rs  as_node.rs  assignment_node.rs  block_node.rs  break_node.rs  compare_node.rs  constant_node.rs  continue_node.rs  deref_node.rs  divide_node.rs  dot_field_node.rs  function_call_node.rs  function_decl_node.rs  if_node.rs  import_node.rs  minus_node.rs  mod.rs  multiplicate_node.rs  not_node.rs  plus_node.rs  power_node.rs  ref_node.rs  return_node.rs  struct_create_node.rs  struct_decl_node.rs  symbol_node.rs  type_node.rs  unary_minus_node.rs  var_call_node.rs  var_decl_node.rs  void_node.rs  while_node.rs
src/crocoi/stdlib/: fs.rs  global.rs  http.rs  math.rs  mod.rs  os.rs
src/crocol/: cli.rs  mod.rs  symbol.rs  utils.rs
src/crocol/node/: array_create_node.rs  array_index_node.rs  as_node.rs  assignment_node.rs  block_node.rs  break_node.rs  compare_node.rs  constant_node.rs  continue_node.rs  deref_node.rs  divide_node.rs  dot_field_node.rs  function_call_node.rs  function_decl_node.rs  if_node.rs  import_node.rs  minus_node.rs  mod.rs  multiplicate_node.rs  not_node.rs  plus_node.rs  power_node.rs  ref_node.rs  return_node.rs  struct_create_node.rs  struct_decl_node.rs  symbol_node.rs  type_node.rs  unary_minus_node.rs  var_call_node.rs  var_decl_node.rs  (+2 more)
src/parser/: array.rs  block.rs  expr.rs  function_call.rs  function_decl.rs  identifier.rs  iter.rs  mod.rs  node.rs  utils.rs  var_type.rs
tests/: functions.rs  mod.rs  variables.rs
tests/arrays/: mod.rs
tests/conditions/: mod.rs
tests/functions/: mod.rs
tests/loops/: mod.rs
tests/primitives/: mod.rs
tests/references/: mod.rs
tests/structs/: mod.rs
tests/variables/: mod.rs
(+79 files in other folders)
