[package]
name = "croco_lang"
version = "0.5.1"
authors = ["truelossless <esteban.gressard@gmail.com>"]
edition = "2018"
build = "build.rs"

[build-dependencies]
cc = "1.0"

[dependencies]
unicode-segmentation = "1.6.0"
dyn-clonable = "0.9.0"
gumdrop = "0.8.0" # lighter alternative to clap
ureq = { version = "*", default-features = false, features = ["native-tls"] } # lighter alternative to reqwest
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm10-0"], optional = true }
libc = { version="0.2.77", optional = true }

[features]
default = ["crocoi", "crocol"]
crocoi = [] # the croco interpreter backend
crocol = ["inkwell", "libc"] # the croco llvm backend 

[lib]
name = "croco"
path = "src/lib.rs"

[[bin]]
name = "crocoi"
path = "src/crocoi/cli.rs"

[[bin]]
name = "crocol"
path = "src/crocol/cli.rs"

[profile.release]
panic = "abort"
lto = true
debug = 0