[package]
authors = ["truelossless <esteban.gressard@gmail.com>"]
build = "build.rs"
edition = "2018"
name = "croco_lang"
version = "0.5.5"

[target.'cfg(windows)'.build-dependencies]
cc = {version = "1.0", optional = true}

[dependencies]
dyn-clonable = "0.9.0" 
gumdrop = "0.8.0" # lighter alternative to clap
inkwell = {git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm10-0"], optional = true} 
libc = {version = "0.2.77", optional = true} 
unicode-segmentation = "1.6.0" 
ureq = {version = "*", default-features = false, features = ["native-tls"]} # lighter alternative to reqwest  

[features]
crocoi = [] # the croco interpreter backend
crocol = ["inkwell", "libc", "cc"] # the croco llvm backend
default = ["crocol", "crocoi"]

[lib]
name = "croco"
path = "src/lib.rs"

[[bin]]
name = "crocoi"
path = "src/crocoi/cli.rs"
required-features = ["crocoi"]

[[bin]]
name = "crocol"
path = "src/crocol/cli.rs"
required-features = ["crocol"]

[profile.release]
lto = true
panic = "abort"
